<resources>
    <string name="app_name">Defense Drill</string>
    <string name="generate_drill_title">Generate Drills</string>
    <string name="generate_drills_description">Randomly generate drills to practice.</string>
    <string name="customize_drills_title">Customize Drills</string>
    <string name="customize_drills_description">See all currently saved Drills and edit them, or create a new one. Filter drills by category and/or sub-category. Long click a Drill to delete it.</string>
    <string name="customize_categories_title">Customize Categories</string>
    <string name="customize_categories_description">See all currently saved Categories and edit them, or create a new one. Long click a Category to delete it.</string>
    <string name="customize_sub_categories_title">Customize sub-Categories</string>
    <string name="customize_sub_categories_description">See all currently saved sub-Categories and edit them, or create a new one. Long click a sub-Category to delete it.</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_description">Leave feedback on the app. This can be an issue you\'ve found, suggestions on future features, or other general comments. Thank you for using Defense Drill and for your feedback! :)</string>
    <string name="select_category">Select a Category</string>
    <string name="random_category">Random Category</string>
    <string name="randomly_select_any_category">Randomly select any category.</string>
    <string name="select_sub_category">Select a sub-Category</string>
    <string name="category_selected_prefix">Category Selected: %1$s</string>
    <string name="random_sub_category">Random sub-Category</string>
    <string name="randomly_select_any_sub_category">Randomly select any sub-category.</string>
    <string name="last_drilled_label">Last Drilled:</string>
    <string name="notes_label">Notes:</string>
    <string name="notes_hint">Enter notes about this drill…</string>
    <string name="confidence_label">Confidence level:</string>
    <string name="skip_drill">Skip Drill</string>
    <string name="mark_as_practiced">Mark as Practiced</string>
    <string name="home">Home</string>
    <string name="reset_skipped_drills">Reset Skipped Drills</string>
    <string name="loading">Loading…</string>
    <string name="save_changes">Save Changes</string>
    <string name="view_edit_categories">Categories</string>
    <string name="view_edit_sub_categories">Sub-Categories</string>
    <string-array name="confidence_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="no_drill_found_by_id">There was an issue retrieving this drill.</string>
    <string name="no_drill_by_category_sub_category">Looks like no matching drills were found!</string>
    <string name="no_drills_left">No more drills in this category.</string>
    <string name="drills">Drills</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="filter_by_sub_category">Filter by sub-Category</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="create_new_drill">Create New Drill</string>
    <string name="name_label">Name:</string>
    <string name="create_new_drill_title">Create New Drill</string>
    <string name="enter_a_name_for_the_drill">Enter a name for the drill…</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_sub_categories">Add sub-Categories</string>
    <string name="save_drill">Save Drill</string>
    <string name="categories">Categories</string>
    <string name="create_new_category">Create New Category</string>
    <string name="sub_categories">Sub-Categories</string>
    <string name="all_sub_categories_instructions">Click to view/edit a sub-Category, hold to delete</string>
    <string name="create_new_sub_category">Create New sub-Category</string>
    <string name="enter_name">Enter name…</string>
    <string name="enter_description">Enter description…</string>
    <string name="description_label">Description:</string>
    <string name="sort">Sort</string>
    <string name="usernameLabel">Username</string>
    <string name="enter_username">Enter username…</string>
    <string name="password_label">Password:</string>
    <string name="enter_password">Enter password…</string>
    <string name="server_connection_issue">Could not connect to server. Please check your internet connection. Server may also be down.</string>
    <string name="login_failure_message">Login failed, please double check your username or password.</string>
    <string name="customize_database_title">Customize Database</string>
    <string name="customize_database_description">Make modifications to your saved Drills, Categories, and Sub-Categories. View them, create them, remove them, and edit them.</string>
    <string name="web_drill_options_title">Web Drill Options</string>
    <string name="web_drill_options_description">Interactive with the online Drill Database, download drills, set up the connection, and log in or out.</string>
    <string name="download_from_database_title">Download From Database</string>
    <string name="download_from_database_description">Download and Update Drills, Categories, and Sub-Categories form the DefenseDrill Online Database.</string>
    <string name="check_for_updates_card_title">Check for Database Updates</string>
    <string name="check_for_updates_card_description">Check the online database for updates to your Drills or for new ones!</string>
    <string name="login_title">Login</string>
    <string name="login_description">Log in to the online DefenseDrill database.</string>
    <string name="logout_title">Logout</string>
    <string name="logout_description">Log out of the online DefenseDrill database.</string>
    <string name="please_wait">Please Wait…</string>
    <string name="instructionsLabel">View Instructions:</string>
    <string name="related_drills_label">View Related Drill:</string>
    <string name="workout_options">Workout Options:</string>
    <string name="view_modify">View/Modify:</string>
    <string name="simulated_attack_settings_title">Simulated Attack Settings</string>
    <string name="simulated_attack_settings_description">Change settings related to simulated attack notifications. Turn them on or off and adjust the schedule or frequency of notifications.</string>
    <string name="simulated_attacks_description">Simulated Attacks are notifications to simulate being attacked with a random Self Defense Drill. The notification times are customizable. This helps you to put these exercises in every day situations, making them more realistic. Chooses Drills from the \"Self Defense\" category.</string>
    <string name="enabled">Enabled:</string>
    <string name="add_notification">Add Notification</string>
    <string name="policy_name">Alarm Name:</string>
    <string name="policy_name_hint">Enter a Name for the Alarm…</string>
    <string name="default_policy_name">New Alarm</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="alarm_days">Alarm Days:</string>
    <string name="time_window">Time Window:</string>
    <string name="frequency">Frequency (+/- 20% for proper randomness):</string>
    <string name="hyphen">-</string>
    <string name="initial_sunday">S</string>
    <string name="initial_monday">M</string>
    <string name="initial_tuesday">T</string>
    <string name="initial_wednesday">W</string>
    <string name="initial_thursday">T</string>
    <string name="initial_friday">F</string>
    <string name="initial_saturday">S</string>
    <string name="click_to_modify_hold_to_delete">(click to modify, hold to delete)</string>
    <string name="simulated_attack_instructions">
"SIMULATED ATTACK INSTRUCTIONS

To get the most out of this exercise, try to figure out three different solutions for this attack:

1. Technical Solution: What is the technical solution? How are you \'supposed\' to handle this attack?

2. Environmental Solution: How can you use your environment to your advantage? Can you escape easily, put something between your attacker and you, use something nearby to strike your opponent?

3. Preventative Solution: How could you have prevented this attack from happening? This may usually just boil down to not being there, allowing yourself an easy escape, or having been more vigilant."
    </string>
    <string name="unlock_drills_title">Unlock Drills</string>
    <string name="unlock_drills_description">Display a list of all saved Drills and mark which ones you know. Only known Drills will be shown and used during Drill generation.</string>
    <string name="showing_known_drills">Showing Known Drills</string>
    <string name="hiding_known_drills">Hiding Known Drills</string>
    <string name="showing_unknown_drills">Showing Unknown Drills</string>
    <string name="hiding_unknown_drills">Hiding Unknown Drills</string>
    <string name="watch_video">Watch Video</string>
    <string-array name="daily_hours">
        <item>12:00 AM</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
        <item>12:00 AM</item>
    </string-array>
    <string-array name="frequency_options">
        <item>Every 15 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every 1 hour</item>
        <item>Every 90 minutes</item>
        <item>Every 2 hour</item>
        <item>Every 3 hours</item>
        <item>Every 4 hours</item>
        <item>Every 6 hours</item>
        <item>Every 12 hours</item>
    </string-array>
    <string-array name="drills_sort_options">
        <item>Name (A-Z)</item>
        <item>Name (Z-A)</item>
        <item>Last Drilled (Old-New)</item>
        <item>Last Drilled (New-Old)</item>
    </string-array>
    <string name="feedback_email_template">
"Thank you for leaving us feedback on the Defense Drill App! Your feedback is very important to us, and we ask that you fill out the following information:

Topic: [What is the nature of your feedback? i.e. feature suggestion, bug, color or verbiage issue, etc.]

Details: [Please include a detailed description of your feedback, the more details the better]

Username: [Online Database Username]

Thank you and we will try to get back to you as quickly as possible!"
    </string>
    <string name="page_icon">Page Icon</string>
    <string name="onboarding_confidence_description">This indicates how confident you feel executing this drill. The less confident you are, the more likely this drill is to be chosen first. This helps you work on drills you are less confident on.</string>
    <string name="onboarding_last_drilled_description">The longer the time since you\'ve last practiced a drill, the more likely it is to be chosen first. This helps keep drills fresh.</string>
    <string name="onboarding_skip_drill_description">If you do not like the drill that was generated, this will give you a new one!</string>
</resources>