<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activityCustomizeDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.CustomizeDatabaseActivity" >

        <com.damienwesterman.defensedrill.ui.util.TitleDescCard
            android:id="@+id/viewDrillsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:title="@string/customize_drills_title"
            app:description="@string/customize_drills_description"
            android:onClick="onCardClick" />

        <com.damienwesterman.defensedrill.ui.util.TitleDescCard
            android:id="@+id/unlockDrillsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:title="@string/unlock_drills_title"
            app:description="@string/unlock_drills_description"
            android:onClick="onCardClick" />

        <com.damienwesterman.defensedrill.ui.util.TitleDescCard
            android:id="@+id/viewCategoriesCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:title="@string/customize_categories_title"
            app:description="@string/customize_categories_description"
            android:onClick="onCardClick" />

        <com.damienwesterman.defensedrill.ui.util.TitleDescCard
            android:id="@+id/viewSubCategoriesCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:title="@string/customize_sub_categories_title"
            app:description="@string/customize_sub_categories_description"
            android:onClick="onCardClick" />

    </LinearLayout>
</ScrollView>
</LinearLayout>