<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/policy_name"
            android:textStyle="italic"
            android:textColor="@color/field_label" />

        <EditText
            android:id="@+id/policyName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine|textCapWords"
            android:textSize="24sp"
            android:text="@string/default_policy_name"
            android:hint="@string/policy_name_hint"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/alarm_days"
            android:textStyle="italic"
            android:textColor="@color/field_label" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/sundayCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:checked="false"
                android:layout_weight="0.33"/>

            <CheckBox
                android:id="@+id/mondayCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:checked="false"
                android:layout_weight="0.33" />

            <CheckBox
                android:id="@+id/tuesdayCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:checked="false"
                android:layout_weight="0.34" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/wednesdayCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:checked="false"
                android:layout_weight="0.33" />

            <CheckBox
                android:id="@+id/thursdayCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:checked="false"
                android:layout_weight="0.33" />

            <CheckBox
                android:id="@+id/fridayCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:checked="false"
                android:layout_weight="0.34" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/saturdayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:checked="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/time_window"
            android:textStyle="italic"
            android:textColor="@color/field_label" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/beginningHourSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="25dp"
                android:textSize="20sp"
                android:text="@string/hyphen" />

            <Spinner
                android:id="@+id/endingHourSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/frequency"
            android:textStyle="italic"
            android:textColor="@color/field_label" />

        <Spinner
            android:id="@+id/frequencySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/savingPolicyProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <!--    Text to be set by the controller    -->
        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:textStyle="italic"
            android:textColor="@color/error"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>