<?xml version="1.0" encoding="utf-8"?><ScrollView
    android:id="@+id/layoutCreateAbstractCategory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            android:textStyle="italic"
            android:textColor="@color/field_label" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="24sp"
            android:hint="@string/enter_name"
            android:autofillHints="" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:text="@string/description_label"
            android:textStyle="italic"
            android:textColor="@color/field_label" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="24sp"
            android:hint="@string/enter_description"
            android:autofillHints="" />

    </LinearLayout>
</ScrollView>